--- a/src/Sheet Template/Row Template/RowComponent.module.css
+++ b/src/Sheet Template/Row Template/RowComponent.module.css
@@ -7,6 +7,7 @@
   min-width: 100%; /* Makes sure the row is always at least as wide as its parent */
   width: max-content; /* Allows it to expand beyond the screen */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adds an even shadow on all sides */
+  border-radius: 16px;
 }
 
 .bodyRow:hover {
