--- a/src/Sheet Template/Row Template/RowComponent.module.css
+++ b/src/Sheet Template/Row Template/RowComponent.module.css
@@ -18,7 +18,7 @@
 .bodyCell {
   padding: 14px 12px;
   width: 180px;
-  text-align: center; /* Changed from left to center */
+  text-align: center;
   font-size: 17px;
   font-weight: 400;
   color: #1d1d1f;
