--- a/src/App Header/AppHeader.module.css
+++ b/src/App Header/AppHeader.module.css
@@ -2,9 +2,8 @@
   position: sticky;
   top: 0;
   width: 100%;
-  background: rgba(255, 255, 255, 0.95);
+  background: white;
   backdrop-filter: blur(20px);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
   z-index: 1000;
   padding: 0 16px;
@@ -37,7 +36,6 @@
 }
 
 .desktopNav {
-  flex-grow: 1;
   justify-content: center;
   margin: 0 20px;
 }
@@ -47,8 +45,6 @@
   overflow-x: auto;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
-  mask-image: linear-gradient(to right, transparent 0%, black 10%, black 90%, transparent 100%);
-  -webkit-mask-image: linear-gradient(to right, transparent 0%, black 10%, black 90%, transparent 100%);
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -201,12 +197,13 @@
   transform: scale(1.05);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .headerContainer {
     flex-direction: column;
     align-items: stretch;
     padding-bottom: 8px;
     min-height: 112px;
+    background-color: transparent;
   }
   .headerTop {
     justify-content: space-between;
@@ -218,6 +215,10 @@
     display: flex;
     justify-content: flex-start;
     padding: 0 8px;
+    height: 70px;
+    border-radius: 16px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+    background-color: rgba(255, 255, 255);
   }
   .avaTitle {
     font-size: 20px;
@@ -234,7 +235,7 @@
   }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 1024px) {
   .mobileNav {
     display: none;
   }
